--- a/index.html
+++ b/index.html
@@ -44,3 +44,4 @@
 	<script type="text/javascript" src="js/style.js"></script>
 	<script type="text/javascript" src="js/wow.min.js"></script>
 </body>
+</html>
