--- a/index.html
+++ b/index.html
@@ -30,9 +30,17 @@
     <!-- content-->
     <div class="circle-overlay">
       <h2>GET YOUR DISCOUNT NOW!</h2>
-      <p>CALL 16398 NOW!</p>
-      <div class="code">USE CODE: FINEBABYLOCK10</div>
-
+      <h4>CALL 16398</h4>
+      <div class="code">Use Promocode: FB10</div>
+      <p>&amp; get 10% on your first order through our call center</p>
+      <!--
+      <div class="social">
+        <div class="text"><p class="text-center">Follow Us:</p></div>
+        <a href="https://www.facebook.com/share/19KeV5BY4z/?mibextid=qi2Omg"><i class="fab fa-facebook"></i> Facebook</a>
+        <a href="https://www.instagram.com/finebabydiapers?igsh=MWRmbXU0ZXFhcm81ag=="><i class="fab fa-instagram"></i> Instagram</a>
+      </div>
+      -->
+      <div class="follow-us">Follow Us:</div>
       <div class="social">
         <a href="https://www.facebook.com/share/19KeV5BY4z/?mibextid=qi2Omg"><i class="fab fa-facebook"></i> Facebook</a>
         <a href="https://www.instagram.com/finebabydiapers?igsh=MWRmbXU0ZXFhcm81ag=="><i class="fab fa-instagram"></i> Instagram</a>
